--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "foodcolorsv",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "keywords": [
     "react",
     "expo",
@@ -18,22 +18,27 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.15",
-    "@react-native-community/netinfo": "^7.1.7",
-    "@react-native-picker/picker": "^2.2.1",
+    "@react-native-community/netinfo": "6.0.0",
+    "@react-native-picker/picker": "1.16.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@reduxjs/toolkit": "^1.7.1",
     "aws-amplify": "^4.3.12",
     "aws-amplify-react-native": "^6.0.2",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "native-base": "3.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-input-mask": "^2.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.6",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5"
   },
