--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "foodcolorsv",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "keywords": [
     "react",
     "expo",
@@ -18,10 +18,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.15",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "6.0.0",
     "@react-native-picker/picker": "1.16.1",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
     "aws-amplify": "^4.3.12",
     "aws-amplify-react-native": "^6.0.2",
@@ -33,6 +37,8 @@
     "react-dom": "16.13.1",
     "react-input-mask": "^2.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
